fix listings wrap and spacing

--- a/frontend/src/components/ListingIndexPage/ListingList.css
+++ b/frontend/src/components/ListingIndexPage/ListingList.css
@@ -55,6 +55,10 @@
     max-width: 720px;
 }
 
+.uneven-listings:last-child {
+    margin-right: 48.1%;
+}
+
 .listing-image-box {
     display: flex;
     justify-content: center;
